--- a/index/Delivery-terms.html
+++ b/index/Delivery-terms.html
@@ -126,7 +126,7 @@
                 </details>
             </div>
             <div class="geo-delivery">
-                <img src="../images/Rectangle 271.svg" style="width: 100%; height: 90%;" alt="Error 404">
+                <!-- <img src="../images/Rectangle 271.svg" style="width: 100%; height: 90%;" alt="Error 404"> -->
             </div>
         </div>
     </section>
